Edited wiki page MTR through web user interface.

--- a/wiki/MTR.wiki
+++ b/wiki/MTR.wiki
@@ -12,3 +12,8 @@ MTRFuncs.vih:
 где acObj  - ссылка на Объект строительва, 
        acZatr - ссылка на Статью затрат (код аналитики при настройке Целевого учёта №73)
 }}}
+
+=Роль Объекта строительства=
+
+При настройке Целевого учёта необходимо в качестве Объекта строительства указывать Роль именно "ОСтрой. Объекты строительства".
+Это позволит автоматически заполнять Объект строительства в Проводке при использовании алгоритма ТХО &VIP_"USERVIPNP"
