Edited wiki page Lotus through web user interface.

--- a/wiki/Lotus.wiki
+++ b/wiki/Lotus.wiki
@@ -30,3 +30,5 @@ http://lotus.galaktika.by/topsoft/k_patch.nsf - патчи системы
 http://lotus.galaktika.by/topsoft/delo.nsf - соответственно база «Дело» (ресурсный центр и т.д.)
 http://lotus.galaktika.by/topsoft/pir.nsf - ПиР
 http://lotus.galaktika.by/update.nsf - Обновления системы
+
+https://support.galaktika.by/support/support.nsf - Инциденты
