Edited wiki page Oracle through web user interface.

--- a/wiki/Oracle.wiki
+++ b/wiki/Oracle.wiki
@@ -1,3 +1,6 @@
+=Чистка журнала=
+truncate table x$journal;
+
 =Инструментарий=
 Для работы с БД на Oracle существует удобный инструмент: PLSQL Developer
 Уже крякнутая версия:
