--- a/wiki/Vip.wiki
+++ b/wiki/Vip.wiki
@@ -18,3 +18,59 @@ Select MBPin.nRec where ( 0 = MBPin.cSopr ) ;
 =Delete All=
 
 Следует иметь в виду, что при использовании конструкции "Delete all" для неКорневой таблицы будут удалены лишь записи, попадающие в текущие ограничения - т.е. не все записи из обрабатываемой табилцы
+
+
+=nRec для Oracle=
+
+{{{
+#include epSystem.vih
+
+//**********************************************************
+#component ""
+handler with replace RegisterGlobToOraComp on extensionPoint epAppInit
+action
+{
+  RegisterGlobalIfc('ToOraCompIfc');
+  result := true;
+}
+
+//**********************************************************
+
+vipInterface ToOraCompIfc;
+  static: function oRec(inComp : variant): string;
+end;
+
+//**********************************************************
+
+interface ToOraCompIfc;
+//----------------------------------------------------------
+
+function oRec(inComp : variant): string;
+var str:string;
+{
+ str := string(inComp,0,0);
+ if MatchesMask(str, '[0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F][0~9A~F]h')
+ {
+
+  result := BCase(str[1] = '0': '8',
+                  str[1] = '1': '9',
+                  str[1] = '2': 'A',
+                  str[1] = '3': 'B',
+                  str[1] = '4': 'C',
+                  str[1] = '5': 'D',
+                  str[1] = '6': 'E',
+                  str[1] = '7': 'F',
+                  str[1] = '8': '0',
+                  str[1] = '9': '1',
+                  str[1] = 'A': '2',
+                  str[1] = 'B': '3',
+                  str[1] = 'C': '4',
+                  str[1] = 'D': '5',
+                  str[1] = 'E': '6',
+                  str[1] = 'F': '7';
+                   'Это бы не нрек!!! ') + substr(str,2,15)
+ }
+  else result := 'Давай нрек на вход!!!!';
+}
+end.
+}}}
