Edited wiki page Oracle through web user interface.

--- a/wiki/Oracle.wiki
+++ b/wiki/Oracle.wiki
@@ -1,3 +1,10 @@
+=Соответствие типов=
+Word number(5)
+LongInt number(10)
+Nrec char(16)
+double number(24, 8)
+
+
 =Чистка журнала=
 truncate table x$journal;
 
