Edited wiki page Oracle through web user interface.

--- a/wiki/Oracle.wiki
+++ b/wiki/Oracle.wiki
@@ -13,6 +13,9 @@ truncate table x$journal;
 Уже крякнутая версия:
 https://docs.google.com/open?id=0BzzBOIHYTuK3MTk3NGM5YzQtYzQwNS00NjNkLWFmYmUtYTQzYjJhMmRmMDQ2 
 
+Если наблюдаются проблемы с русской кодировкой - делаем так:
+HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\oracle\KEY_OraClient11g_home2_32bit\NLS_LANG и указываем кодировку как в БД, в моём случае это AMERICAN_AMERICA.CL8MSWIN1251
+
 =Пример запроса на рассчитанные права пользователей на таблицы=
 {{{
 Oracle запрос на Права пользователей на Таблицы
